Prevented jumping due to clock by changing font to monospace, finishing touches

--- a/src/App.css
+++ b/src/App.css
@@ -1,134 +1,136 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-  background-color: #FFFBE6;
-  color: #356859;
+	background-color: #fffbe6;
+	color: #356859;
 }
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 .navbar-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	list-style: none;
 }
 
 .navbar-container > li:hover {
-  border-bottom: 2px solid #37966F;
-  cursor: pointer;
+	border-bottom: 2px solid #37966f;
+	cursor: pointer;
 }
 
-.navbar-container > li{
-  color: #fd5523;
-  font-size: 16px;
-  margin: 15px;
-  padding: 0 5px;
-  border-bottom: 2px solid #37966e36;
+.navbar-container > li {
+	color: #fd5523;
+  font-family: 'Roboto Mono', monospace;
+	font-size: 16px;
+	margin: 15px;
+	padding: 0 5px;
+	border-bottom: 2px solid #37966e36;
 }
 
 .navbar-container > li.nav-counter {
-  font-size: 20px;
-  font-weight: 600;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 .card-container {
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+	width: 100vw;
+	height: 90vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .card {
-  width: 30vw;
-  height: 70vh;
-  background-color: #b9e4c9;
-  border-radius: 20px;
-  padding: 20px;
-  box-shadow: 3px 3px #37966e33;
-  color: #fd5523;
+	width: 30vw;
+	height: 70vh;
+	background-color: #b9e4c9;
+	border-radius: 20px;
+	padding: 20px;
+	box-shadow: 3px 3px #37966e33;
+	color: #fd5523;
 }
 
-.card > h3 {
-  color: #fd5523;
-  text-align: center;
-  font-weight: 500;
+.card > h2 {
+	color: #fd5523;
+	text-align: center;
+	font-weight: 500;
+  border-radius: 5px;
 }
-.card > h3:hover {
-  background-color: #35685952;
+.card > h2:hover {
+	background-color: #35685952;
 }
 .list-info {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 .list-info > input {
-  margin-top: auto;
-  margin-bottom: 5px;
-  padding-left: 5px;
-  border-radius: 5px;
-  height: 24px;
-  border: none;
+	margin-top: auto;
+	margin-bottom: 5px;
+	padding-left: 5px;
+	border-radius: 5px;
+	height: 24px;
+	border: none;
 }
 .list-info > button {
-  margin-bottom: 25px;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  background-color: #FD5523;
-  color: white;
-  font-size: 16px;
+	margin-bottom: 25px;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
+	background-color: #fd5523;
+	color: white;
+	font-size: 16px;
 }
 
 .list-info > ul {
-  list-style: none;
-  color: black;
+	list-style: none;
+	color: black;
 }
 
 .list-info > ul > li {
-  padding: 1px;
-  padding-left: 5px;
-  border-radius: 5px;
+	padding: 1px;
+	padding-left: 5px;
+	border-radius: 5px;
 }
 
 .list-info > ul > li:hover {
-  background-color: #35685931;
-  cursor: pointer;
+	background-color: #35685931;
+	cursor: pointer;
 }
 
 @media (max-width: 800px) {
-  .list-info {
-    font-size: 14px;
-  }
-  .navbar-container {
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-  .navbar-container > li {
-    font-size: 14px;
-    white-space: nowrap;
-  }
-  .navbar-container > li.nav-counter {
-    font-size: 14px;
-    font-weight: bold;
-    text-align: center;
-    order: 1;
-  }
-  .card-container {
-    flex-direction: column;
-    height: 200vh;
-  }
-  .card {
-    width: 90vw;
-    margin: 10px 0;
-  }
+	.list-info {
+		font-size: 14px;
+	}
+	.navbar-container {
+		flex-wrap: wrap;
+		justify-content: space-evenly;
+	}
+	.navbar-container > li {
+		font-size: 14px;
+		white-space: nowrap;
+	}
+	.navbar-container > li.nav-counter {
+		font-size: 14px;
+		font-weight: bold;
+		text-align: center;
+		order: 1;
+	}
+	.card-container {
+		flex-direction: column;
+		height: 200vh;
+	}
+	.card {
+		width: 90vw;
+		margin: 10px 0;
+	}
 }
